Make all but File properties editable
File is giving me...more trouble.